# ecal-go

./: .clang-format  .gitignore  .golangci.yaml  CMakeLists.txt  README.md  go.mod  go.sum  go.work  main.go
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
cmake/: package_user.go.in
cmd/: go.mod  go.sum
cmd/monitor/: common.go  config_page.go  detailed_process.go  detailed_service.go  detailed_topic.go  hosts_list.go  log_list.go  main.go  page_config.go  page_processes.go  page_processes_detailed.go  page_processes_main.go  page_services.go  page_services_detailed.go  page_services_main.go  page_topics.go  page_topics_detailed.go  page_topics_main.go  page_topics_messages.go  placeholder.go  processes_list.go  proto_display.go  services_list.go  styles.go  tea.go  topics_list.go
cmd/monitor/internal/protobuf/protorange/: range.go
cmd/throughput/: main.go  throughput
ecal/: .gitignore  callback.go  cgo_config.cpp  cgo_config.h  cgo_types.cpp  cgo_types.h  cgo_types.hpp  config.go  core.cpp  core.go  core.h  core_test.go  ecal_core.go  ecal_core_test.go  ecal_go_core.cpp  ecal_go_core.h  ecal_go_publisher.cpp  ecal_go_publisher.h  ecal_publisher.go  ecal_publisher_test.go  process.h  publisher.go  publisher_protobuf_test.go  publisher_string_test.go  pubsub_protobuf_test.go  pubsub_string_test.go  subscriber.go  subscriber_protobuf_test.go  subscriber_string_test.go  types.cpp  types.go  types.h  types.hpp
ecal/ecallog/: callback.go  logging.cpp  logging.go  logging.h  logging_test.go
ecal/ecaltypes/: types.go
ecal/logging/: callback.go  logging.cpp  logging.go  logging.h  logging_test.go
ecal/monitoring/: callback.go  monitoring.cpp  monitoring.go  monitoring.h  monitoring_test.go
ecal/msg/: datatype.go
ecal/protobuf/publisher/: protobuf_publisher.go  protobuf_publisher_test.go
ecal/protobuf/subscriber/: protobuf_subscriber.go  protobuf_subscriber_test.go
ecal/publisher/: cgo_wrapping.go  publisher.cpp  publisher.go  publisher.h  publisher_test.go
ecal/registration/: registration.cpp  registration.go  registration.h  registration_test.go
ecal/string/publisher/: string_publisher.go  string_publisher_test.go
ecal/string/subscriber/: string_subscriber.go  string_subscriber_test.go
ecal/subscriber/: cgo_wrapping.go  subscriber.cpp  subscriber.go  subscriber.h  subscriber_test.go
ecal/types/: types.cpp  types.go  types.h  types.hpp
internal/: handle_map.hpp
internal/ecaltest/: init.go
internal/ecaltest/protobuf/testutil_publisher/: testutil_protobuf_publisher.go
internal/ecaltest/regtest/: test_registration.go
internal/ecaltest/string/testutil_publisher/: testutil_string_publisher.go
internal/ecaltest/testutil/: testutil_publisher.go  testutil_subscriber.go
internal/ecaltest/testutil_publisher/: testutil_publisher.go
internal/ecaltest/testutil_subscriber/: testutil_subscriber.go
internal/protobuf/: protobuf.go  protobuf_test.go
project/: gcc.cmake
protos/: animal.pb.go  animal.proto  house.pb.go  house.proto  person.pb.go  person.proto
samples/: sample.go
